Overflow-x inserido. Cabeçalho móvel apenas no desktop e fixado no mobile

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -1,6 +1,7 @@
 @media (max-width: 767px) {
   .home-section {
     width: 100%;
+    max-width: 100%;
     height: 100%;
     background-image: url(../../../assets/png/home2.png);
     background-size: contain;
@@ -22,6 +23,8 @@
   }
 
   main {
+    width: 100%;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -92,6 +95,7 @@
         display: flex;
         height: auto;
         width: 100%;
+        max-width: 100%;
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -116,6 +120,8 @@
       }
 
       .cards-therapy-section {
+        width: 100%;
+        max-width: 100%;
         display: flex;
         height: auto;
         flex-direction: column;
@@ -142,6 +148,8 @@
 
 
     .cards-depoimentos-section {
+      width: 100%;
+      max-width: 100%;
       box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
       display: flex;
       height: auto;
@@ -171,6 +179,7 @@
     .contact-section {
       display: flex;
       width: 100%;
+      max-width: 100%;
       background-color: #dbaca3;
       color: #f0e6df;
       flex-direction: column;
@@ -239,6 +248,7 @@
 @media (min-width: 1024px) {
   .home-section {
     width: 100%;
+    max-width: 100%;
     height: 100%;
     background-image: url(../../../assets/png/home-desktop3.png);
     background-size: contain;
@@ -270,6 +280,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    max-width: 100%;
     margin: 0 auto;
     box-sizing: border-box;
     padding-top: 2rem;
@@ -336,6 +347,7 @@
       display: flex;
       height: auto;
       width: 100%;
+      max-width: 100%;
       flex-direction: column;
       justify-content: center;
       align-items: center;
@@ -366,6 +378,7 @@
       justify-content: center;
       align-items: center;
       width: 100%;
+      max-width: 100%;
       padding-block: 3rem;
 
       h2 {
@@ -390,6 +403,7 @@
       box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
       display: flex;
       width: 100%;
+      max-width: 100%;
       flex-direction: column;
       justify-content: center;
       align-items: center;
@@ -423,6 +437,7 @@
       background-color: #dbaca3;
       color: #f0e6df;
       width: 100%;
+      max-width: 100%;
       height: 55vh;
       gap: 7rem;
 
