--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -12,6 +12,12 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 
     section {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: 1000;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
       .mobile-menu {
         display: flex;
         width: 100%;
@@ -48,15 +54,6 @@
         width: 0;
       }
     }
-  }
-  section.fixed{
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    z-index: 1000;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   }
 }
 
